--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>7 Sep 2011</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>Qutayba Mokdad</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+963 968296124</span></li>
+<!--                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+963 968296124</span></li> -->
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Damascus, syria</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>qutaybamokdad2011@gmail.com</span></li>
                 </ul>
