--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <h1 class="text-light"><a href="index.html">QUTAYBA AL MOKDAD</a></h1>
         <div class="social-links mt-3 text-center">
        <!--   <a href="" class="twitter"><i class="bx bxl-twitter"></i></a>-->
+                    <a href="https://www.youtube.com/channel/UCBwuSEX8uZzh7rCdz1YyUXg" target="_blank" class="youtube"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.facebook.com/qutayba.moukdad" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.instagram.com/qutaybamokdad/" target="_blank"class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://www.linkedin.com/in/quatyba-almokdad-016a74208/" target="_blank"class="linkedin"><i class="bx bxl-linkedin"></i></a>
